--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,4 @@ services:
       - "3000:3000" # Map port 3000 in the container to port 3000 on the host
     volumes:
       - .:/rails
-    command: ./bin/rails server -b 0.0.0.0 -p 3000
+    command: sh -c "bin/rails db:migrate && bin/rails server -b 0.0.0.0 -p 3000"
