--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,19 +1,38 @@
+version: "3.8"
+
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
     environment:
-      - RAILS_ENV=production
-      - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
       - RAILS_SERVE_STATIC_FILES=true
+      - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
+      - RAILS_ENV=production
+      - DATABASE_URL=${DATABASE_URL}
     ports:
       - "3000:3000"
     volumes:
       - .:/rails
-      - db-data:/rails/db # Mount the named volume to the db directory
-      - ./ssl:/rails/ssl # Mount the SSL certificates directory (if needed)
-    command: sh -c "bin/rails db:migrate && bin/rails assets:precompile && bin/rails server -b 0.0.0.0 -p 3000"
+      - db-data:/rails/db
+      - ./ssl:/rails/ssl
+    depends_on:
+      - db
+    command: sh -c "bin/rails db:prepare && bin/rails assets:precompile && bin/rails server -b 0.0.0.0 -p 3000"
+
+  db:
+    image: postgres:16
+    container_name: postgresdocker
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=fox_pos_production
 
 volumes:
-  db-data: # Define the named volume for SQLite database
+  db-data:
+  pg_data:
